<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".CartScreen">

    <ImageButton
        android:id="@+id/cartBackImageButton"
        android:layout_width="188dp"
        android:layout_height="100dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/arrowback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="786dp"
        android:layout_height="98dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:gravity="center"
        android:text="@string/cart_title"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/cartBackImageButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cartCancelButton"
        android:layout_width="640dp"
        android:layout_height="100dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="21dp"
        android:text="@string/cancel_order"
        android:textSize="20dp"
        app:backgroundTint="#B12D2D"
        app:layout_constraintStart_toEndOf="@+id/cartCheckoutButton"
        app:layout_constraintTop_toBottomOf="@+id/cartScreenRecyclerView" />

    <Button
        android:id="@+id/cartCheckoutButton"
        android:layout_width="640dp"
        android:layout_height="100dp"
        android:text="@string/cart_screen_checkout"
        android:textSize="20dp"
        app:backgroundTint="#6EB528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartScreenRecyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartScreenRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="560dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartBackImageButton" />
</androidx.constraintlayout.widget.ConstraintLayout>