<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentMethodScreen">


    <ImageButton
        android:id="@+id/paymentScreenBackImageButton"
        android:layout_width="164dp"
        android:layout_height="61dp"
        android:src="@drawable/arrowback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />


    <Button
        android:id="@+id/paymentCardButton"
        android:layout_width="650dp"
        android:layout_height="150dp"
        android:layout_marginTop="232dp"
        android:background="#FFFFFF"
        android:text="@string/payment_Screen_Card"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/paymentCashButton"
        android:layout_width="650dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:background="#FFFFFF"
        android:text="@string/payment_Screen_Cash"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentCardButton" />

    <ImageView
        android:id="@+id/cardPaymentImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="252dp"
        android:layout_marginLeft="252dp"
        android:layout_marginTop="232dp"
        android:src="@drawable/cardpaymentmastercard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cashPaymentImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="252dp"
        android:layout_marginLeft="252dp"
        android:layout_marginTop="424dp"
        android:src="@drawable/cashpayment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/paymentScreenLogo"
        android:layout_width="112dp"
        android:layout_height="95dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="656dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hohologo" />

    <TextView
        android:id="@+id/paymentScreenHeader"
        android:layout_width="884dp"
        android:layout_height="92dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/payment_Screen_Header"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/itemScreenBackImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>